[package]
name = "esp32-nimble"
version = "0.6.0"
authors = ["taks <857tn859@gmail.com>"]
edition = "2021"
resolver = "2"
repository = "https://github.com/taks/esp32-nimble"
license = "Apache-2.0"
description = "A wrapper for the ESP32 NimBLE Bluetooth stack."
readme = "README.md"
keywords = ["bluetooth", "ble", "esp32", "embedded", "async"]
categories = ["embedded", "hardware-support"]
documentation = "https://taks.github.io/esp32-nimble/esp32_nimble/index.html"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std"]

std = ["esp-idf-svc/std", "esp-idf-hal/std", "once_cell/std", "bstr/std"]
no_std = ["once_cell/critical-section", "esp-idf-hal/critical-section", "bstr/alloc"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-sys = { version = "0.34", default-features = false }
esp-idf-hal = { version = "0.43", default-features = false, features = ["embassy-sync"] }
esp-idf-svc = { version = "0.48", default-features = false, features = ["alloc"] }
embedded-svc = { version = "0.27", default-features = false }

bitflags = { version = "2.4.1" }
bstr = { version = "1.8.0", default-features = false }
embassy-sync = { version = "0.5.0" }
num_enum = { version = "0.7", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
uuid = { version = "1", default-features = false, features = ["macro-diagnostics"] }

[dev-dependencies]
esp-idf-sys = { version = "0.34", default-features = false, features = ["binstart", "alloc_handler"] }

[build-dependencies]
embuild = "0.31.0"
anyhow = "1.0.58"
