[package]
name = "esp32-nimble"
version = "0.8.1"
authors = ["taks <857tn859@gmail.com>"]
edition = "2021"
resolver = "2"
repository = "https://github.com/taks/esp32-nimble"
license = "Apache-2.0"
description = "A wrapper for the ESP32 NimBLE Bluetooth stack."
readme = "README.md"
keywords = ["bluetooth", "ble", "esp32", "embedded", "async"]
categories = ["embedded", "hardware-support"]
documentation = "https://taks.github.io/esp32-nimble/esp32_nimble/index.html"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std"]

std = ["esp-idf-svc/std", "once_cell/std", "bstr/std"]
no_std = ["once_cell/critical-section", "esp-idf-svc/critical-section", "bstr/alloc"]
debug = []

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false, features = ["alloc", "embassy-sync"] }

bitflags = { version = "2.4.1" }
bstr = { version = "1.8.0", default-features = false }
embassy-sync = { version = "0.6" }
heapless = "0.8.0"
num_enum = { version = "0.7", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
uuid = { version = "1", default-features = false, features = ["macro-diagnostics"] }

cfg-if = "1.0"

[dev-dependencies]
anyhow = "1"
esp-idf-svc = "0.49"

[build-dependencies]
anyhow = "1"
embuild = "0.32"

[patch.crates-io]
# see: https://github.com/esp-rs/espup/issues/440
clang-sys = { git = "https://github.com/taks/clang-sys.git", branch = "load_with_flags"}
